@@ -7,7 +7,6 @@ import com.github.saphyra.apphub.lib.event.processor.EventProcessorRegistry;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -22,7 +21,7 @@ public class NotebookEventProcessorRegistryImpl implements EventProcessorRegistr
 
     @Override
     public List<RegisterProcessorRequest> getRequests() {
-        return Arrays.asList(
+        return List.of(
             RegisterProcessorRequest.builder()
                 .host(host)
                 .eventName(DeleteAccountEvent.EVENT_NAME)
